--- a/css/main.css
+++ b/css/main.css
@@ -1,23 +1,15 @@
-
-
 /* ==========================================================================
    Author's custom styles
    ========================================================================== */
 
-.container {
-  max-width: 970px !important;
-  /*width: 970px;*/
-}
+.container { max-width: 970px !important; }
 
 a {
-  color: #798E85;
-  &:active, &:link, &:hover {
-    color: #798E85;
-  }
-  &.btn-primary {
-    color: #798E85;
-  }
+	color: #798E85;
 }
+
+a:hover, a:link, a:hover { color: #798E85; }
+a.btn-primary { color: #798E85; }
 
 h1 {
 	font-size: 18px;
@@ -32,7 +24,7 @@ h3 {
 	color: #798E85;
 }
 
-ul.vert-nav { list-style: none; margin: 0; padding: 0;} 
+ul.vert-nav { list-style: none; margin: 0; padding: 0;}
 
 .navbar .nav > li > a{
 	color: #798E85;
@@ -41,20 +33,20 @@ ul.vert-nav { list-style: none; margin: 0; padding: 0;}
 
 .left-nav-title {padding: 2px; color: #798E85; font-weight: bold;}
 
-.leftlinks {  
-        font-family: Verdana, Arial, Helvetica, sans-serif; 
-        font-size: 12px; 
-        color: #798E85;
-		font-weight: normal;
-        text-decoration: underline;
-        line-height: 30px;
-}			
+.leftlinks {
+	font-family: Verdana, Arial, Helvetica, sans-serif;
+	font-size: 12px;
+	color: #798E85;
+	font-weight: normal;
+	text-decoration: underline;
+	line-height: 30px;
+}
 
-.footerlinks {  
-        font-family: Arial, Helvetica, sans-serif; 
-        font-size: 11px; 
-        color: #798E85;
-        text-decoration: none;
+.footerlinks {
+	font-family: Arial, Helvetica, sans-serif;
+	font-size: 11px;
+	color: #798E85;
+	text-decoration: none;
 }
 
 
@@ -62,8 +54,7 @@ ul.vert-nav { list-style: none; margin: 0; padding: 0;}
 	font: 100% Verdana, Arial, Helvetica, sans-serif;
 	background: #FFFFFF;
 	padding: 0;
-    
-    padding-bottom: 10px;
+	padding-bottom: 10px;
 	text-align: center; /* this centers the container in IE 5* browsers. The text is then set to the left aligned default in the #container selector */
 	color: #000000;
 }
@@ -72,11 +63,11 @@ ul.vert-nav { list-style: none; margin: 0; padding: 0;}
 	text-align: center;
 }
 
-.footertext {  
-        font-family: Arial, Helvetica, sans-serif; 
-        font-size: 9px; 
-        color: #4d4d4d;
-        text-decoration: bold;
+.footertext {
+	font-family: Arial, Helvetica, sans-serif;
+	font-size: 9px;
+	color: #4d4d4d;
+	font-weight: bold;
 }
 
 .heading1 {
@@ -88,67 +79,66 @@ ul.vert-nav { list-style: none; margin: 0; padding: 0;}
 }
 
 .jumboheading {
-	    font-family: Arial, Helvetica, sans-serif; 
-        font-size: 32px; 
-        color: #4d4d4d;
-        text-decoration: bold;
-		text-align: center;
+	font-family: Arial, Helvetica, sans-serif;
+	font-size: 32px;
+	color: #4d4d4d;
+	font-weight: bold;
+	text-align: center;
 }
 
 
 .jumbotext {
-	    font-family: Arial, Helvetica, sans-serif; 
-        font-size: 12px; 
-        color: #4d4d4d;
-        text-decoration: bold;
-		text-align: center;
+	font-family: Arial, Helvetica, sans-serif;
+	font-size: 12px;
+	color: #4d4d4d;
+	font-weight: bold;
+	text-align: center;
 }
 
 .phone {
-        font-family: 'Volkhov', serif;
-        font-size: 20px;
-        font-weight: 400;
-        color: #798E85
+	font-family: 'Volkhov', serif;
+	font-size: 20px;
+	font-weight: 400;
+	color: #798E85;
 }
 
 .jumbo-style {
-        margin-left: 0px;
-        margin-right: 0px;
-        padding-left: 0px;
-        padding-right: 0px;
+	margin-left: 0px;
+	margin-right: 0px;
+	padding-left: 0px;
+	padding-right: 0px;
 }
 
 
 .monthly-special-title {
-        font-family: Arial, Helvetica, sans-serif; 
-        font-size: 20px; 
-        color: #798E85;
-        text-decoration: bold;
-		text-align: center;
+	font-family: Arial, Helvetica, sans-serif;
+	font-size: 20px;
+	color: #798E85;
+	font-weight: bold;
+	text-align: center;
 }
 
 .monthly-special-text {
-        font-family: Arial, Helvetica, sans-serif; 
-        font-size: 14px; 
-        color: #798E85;
-        text-decoration: underline;
-		text-align: center;
-    
+	font-family: Arial, Helvetica, sans-serif;
+	font-size: 14px;
+	color: #798E85;
+	text-decoration: underline;
+	text-align: center;
 }
 
 
 .monthly-special-retail {
-        font-family: Arial, Helvetica, sans-serif; 
-        font-size: 12px; 
-        color: #4d4d4d;
-        text-decoration: none;
-		text-align: center;
+	font-family: Arial, Helvetica, sans-serif;
+	font-size: 12px;
+	color: #4d4d4d;
+	text-decoration: none;
+	text-align: center;
 }
 
 .monthly-special-price {
-        font-family: Arial, Helvetica, sans-serif; 
-        font-size: 14px; 
-        color: #4d4d4d;
-        text-decoration: bold;
-		text-align: center;    
+	font-family: Arial, Helvetica, sans-serif;
+	font-size: 14px;
+	color: #4d4d4d;
+	font-weight: bold;
+	text-align: center;
 }
